[package]
name = "rarephish-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Yusuf Wadi"]
description = "Procedurally generated idle fishing game built with Bevy Engine"
repository = "https://github.com/yusuf-wadi/rarephish-bevy"
license = "MIT"

[dependencies]
bevy = "0.14"
rand = "0.8"
rand_chacha = "0.3"

# Fast compiles in dev mode
[profile.dev]
opt-level = 1

# Optimize dependencies even in dev mode
[profile.dev.package."*"]
opt-level = 3

# Release optimizations
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
